--- a/Dockerfiles/base/Dockerfile-7.4
+++ b/Dockerfiles/base/Dockerfile-7.4
@@ -1,5 +1,6 @@
 # Auto-generated via Ansible: edit build/ansible/DOCKERFILES/Dockerfile-base.j2 instead.
-FROM php:7.4-fpm
+#FROM php:7.4-fpm
+FROM php:7.4.3-fpm-buster
 MAINTAINER "cytopia" <cytopia@everythingcli.org>
 
 
