--- a/Dockerfiles/mods/Dockerfile-7.4
+++ b/Dockerfiles/mods/Dockerfile-7.4
@@ -33,7 +33,7 @@ RUN set -eux \
 	libpng-dev \
 	libpq-dev \
 	libpspell-dev \
-	# librabbitmq-dev \
+	librabbitmq-dev \
 	librdkafka-dev \
 	libsasl2-dev \
 	# libsnmp-dev \
@@ -68,6 +68,7 @@ RUN set -eux \
 	echo "ffi.enable = 1" >> /usr/local/etc/php/conf.d/docker-php-ext-ffi.ini; \
 	fi
 
+# RabbitMQ
 # -------------------- Installing PHP Extension: amqp --------------------
 RUN set -eux \
 	# Installation: Generic
