--- a/Dockerfiles/mods/Dockerfile-7.4
+++ b/Dockerfiles/mods/Dockerfile-7.4
@@ -292,22 +292,22 @@ RUN set -eux \
 
 
 # -------------------- Installing PHP Extension: mongodb --------------------
-# RUN set -eux \
-# 	# Installation: Generic
-# 	# Type:         PECL extension
-# 	# Default:      Pecl command
-# 	&& pecl install mongodb \
-# 	# Enabling
-# 	&& docker-php-ext-enable mongodb \
-# 	&& true
+RUN set -eux \
+	# Installation: Generic
+	# Type:         PECL extension
+	# Default:      Pecl command
+	&& pecl install mongodb \
+	# Enabling
+	&& docker-php-ext-enable mongodb \
+	&& true
 
 
 # -------------------- Installing PHP Extension: mysqli --------------------
-# RUN set -eux \
-# 	# Installation: Generic
-# 	# Type:         Built-in extension
-# 	&& docker-php-ext-install -j$(getconf _NPROCESSORS_ONLN) mysqli \
-# 	&& true
+RUN set -eux \
+	# Installation: Generic
+	# Type:         Built-in extension
+	&& docker-php-ext-install -j$(getconf _NPROCESSORS_ONLN) mysqli \
+	&& true
 
 
 # -------------------- Installing PHP Extension: oauth --------------------
@@ -846,8 +846,8 @@ RUN set -eux \
 	# && php-fpm -m | grep -oiE '^memcache$' \
 	# && php -m | grep -oiE '^memcached$' \
 	# && php-fpm -m | grep -oiE '^memcached$' \
-	# && php -m | grep -oiE '^mongodb$' \
-	# && php-fpm -m | grep -oiE '^mongodb$' \
+	&& php -m | grep -oiE '^mongodb$' \
+	&& php-fpm -m | grep -oiE '^mongodb$' \
 	&& php -m | grep -oiE '^mysqli$' \
 	&& php-fpm -m | grep -oiE '^mysqli$' \
 	&& php -m | grep -oiE '^mysqlnd$' \
