remove old libs from mods

--- a/Dockerfiles/mods/Dockerfile-7.4
+++ b/Dockerfiles/mods/Dockerfile-7.4
@@ -735,8 +735,8 @@ RUN set -eux \
 	libpq5 \
 	librabbitmq4 \
 	librdkafka1 \
-	libssh2-1 \
-	libsybdb5 \
+	# libssh2-1 \
+	# libsybdb5 \
 	libtidy5deb1 \
 	libvpx5 \
 	libwebp-dev \
@@ -745,7 +745,7 @@ RUN set -eux \
 	libxslt1.1 \
 	libyaml-0-2 \
 	libzip4 \
-	snmp \
+	# snmp \
 	ca-certificates \
 	&& rm -rf /var/lib/apt/lists/* \
 	\
