--- a/Dockerfiles/prod/Dockerfile-7.4
+++ b/Dockerfiles/prod/Dockerfile-7.4
@@ -1,5 +1,5 @@
 # Auto-generated via Ansible: edit build/ansible/DOCKERFILES/Dockerfile-prod.j2 instead.
-FROM devilbox/php-fpm:7.4-mods
+FROM grengojbo/php-fpm:7.4-mods
 MAINTAINER "cytopia" <cytopia@everythingcli.org>
 
 
@@ -10,12 +10,12 @@ MAINTAINER "cytopia" <cytopia@everythingcli.org>
 #LABEL "org.opencontainers.image.created"=""
 #LABEL "org.opencontainers.image.version"=""
 #LABEL "org.opencontainers.image.revision"=""
-LABEL "maintainer"="cytopia <cytopia@everythingcli.org>"
-LABEL "org.opencontainers.image.authors"="cytopia <cytopia@everythingcli.org>"
-LABEL "org.opencontainers.image.url"="https://github.com/devilbox/docker-php-fpm"
-LABEL "org.opencontainers.image.documentation"="https://github.com/devilbox/docker-php-fpm"
-LABEL "org.opencontainers.image.source"="https://github.com/devilbox/docker-php-fpm"
-LABEL "org.opencontainers.image.vendor"="devilbox"
+LABEL "maintainer"="Oleg Dolya <oleg.dolya@gmail.com>"
+LABEL "org.opencontainers.image.authors"="Oleg Dolya <oleg.dolya@gmail.com>"
+LABEL "org.opencontainers.image.url"="https://github.com/grengojbo/docker-php-fpm"
+LABEL "org.opencontainers.image.documentation"="https://github.com/grengojbo/docker-php-fpm"
+LABEL "org.opencontainers.image.source"="https://github.com/grengojbo/docker-php-fpm"
+LABEL "org.opencontainers.image.vendor"="grengojbo"
 LABEL "org.opencontainers.image.licenses"="MIT"
 LABEL "org.opencontainers.image.ref.name"="7.4-prod"
 LABEL "org.opencontainers.image.title"="PHP-FPM 7.4-prod"
@@ -29,19 +29,14 @@ RUN set -eux \
 	&& DEBIAN_FRONTEND=noninteractive apt-get update -qq \
 	&& DEBIAN_FRONTEND=noninteractive apt-get install -qq -y --no-install-recommends --no-install-suggests apt-utils \
 	&& DEBIAN_FRONTEND=noninteractive apt-get install -qq -y --no-install-recommends --no-install-suggests \
-		locales-all \
-		postfix \
-		postfix-pcre \
-		cron \
-		rsyslog \
-		socat \
-		supervisor \
+	locales-all \
+	socat \
+	&& echo "-------------------- composer --------------------" \
+	&& curl -sS -L --fail https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer \
+	\
+
 	&& DEBIAN_FRONTEND=noninteractive apt-get purge -qq -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false apt-utils \
 	&& rm -rf /var/lib/apt/lists/* \
-	\
-	&& rm -rf /etc/supervisor* \
-	&& mkdir -p /etc/supervisor/conf.d \
-	&& mkdir -p /var/log/supervisor \
 	\
 	&& (find /usr/local/bin -type f -print0 | xargs -n1 -0 strip --strip-all -p 2>/dev/null || true) \
 	&& (find /usr/local/lib -type f -print0 | xargs -n1 -0 strip --strip-all -p 2>/dev/null || true) \
@@ -93,5 +88,5 @@ EXPOSE 9000
 ###
 ### Entrypoint
 ###
-CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/supervisord.conf"]
+CMD ["/usr/local/sbin/php-fpm"]
 ENTRYPOINT ["/docker-entrypoint.sh"]
