--- a/Dockerfiles/base/Dockerfile-7.4
+++ b/Dockerfiles/base/Dockerfile-7.4
@@ -47,6 +47,8 @@ RUN set -eux \
 RUN set -eux \
 	&& DEBIAN_FRONTEND=noninteractive apt-get update -qq \
 	&& DEBIAN_FRONTEND=noninteractive apt-get install -qq -y --no-install-recommends --no-install-suggests procps \
+	&& apt-get autoremove -y && apt-get autoclean -y && apt-get clean -y \
+	&& rm -fr /tmp/* /var/tmp/* \
 	&& rm -rf /var/lib/apt/lists/*
 
 
