--- a/Dockerfiles/prod/Dockerfile-7.4
+++ b/Dockerfiles/prod/Dockerfile-7.4
@@ -1,6 +1,6 @@
 # Auto-generated via Ansible: edit build/ansible/DOCKERFILES/Dockerfile-prod.j2 instead.
 FROM grengojbo/php-fpm:7.4-mods
-MAINTAINER "cytopia" <cytopia@everythingcli.org>
+MAINTAINER "Oleg Dolya" <oleg.dolya@gmail.com>
 
 
 ###
