--- a/Dockerfiles/base/Dockerfile-7.4
+++ b/Dockerfiles/base/Dockerfile-7.4
@@ -1,7 +1,7 @@
 # Auto-generated via Ansible: edit build/ansible/DOCKERFILES/Dockerfile-base.j2 instead.
 #FROM php:7.4-fpm
 FROM php:7.4.3-fpm-buster
-MAINTAINER "cytopia" <cytopia@everythingcli.org>
+MAINTAINER "Oleg Dolya" <oleg.dolya@gmail.com>
 
 
 ###
@@ -11,12 +11,12 @@ MAINTAINER "cytopia" <cytopia@everythingcli.org>
 #LABEL "org.opencontainers.image.created"=""
 #LABEL "org.opencontainers.image.version"=""
 #LABEL "org.opencontainers.image.revision"=""
-LABEL "maintainer"="cytopia <cytopia@everythingcli.org>"
-LABEL "org.opencontainers.image.authors"="cytopia <cytopia@everythingcli.org>"
-LABEL "org.opencontainers.image.url"="https://github.com/devilbox/docker-php-fpm"
-LABEL "org.opencontainers.image.documentation"="https://github.com/devilbox/docker-php-fpm"
-LABEL "org.opencontainers.image.source"="https://github.com/devilbox/docker-php-fpm"
-LABEL "org.opencontainers.image.vendor"="devilbox"
+LABEL "maintainer"="Oleg Dolya <oleg.dolya@gmail.com>"
+LABEL "org.opencontainers.image.authors"="Oleg Dolya <oleg.dolya@gmail.com>"
+LABEL "org.opencontainers.image.url"="https://github.com/grengojbo/docker-php-fpm"
+LABEL "org.opencontainers.image.documentation"="https://github.com/grengojbo/docker-php-fpm"
+LABEL "org.opencontainers.image.source"="https://github.com/grengojbo/docker-php-fpm"
+LABEL "org.opencontainers.image.vendor"="grengojbo"
 LABEL "org.opencontainers.image.licenses"="MIT"
 LABEL "org.opencontainers.image.ref.name"="7.4-base"
 LABEL "org.opencontainers.image.title"="PHP-FPM 7.4-base"
@@ -26,8 +26,8 @@ LABEL "org.opencontainers.image.description"="PHP-FPM 7.4-base"
 ###
 ### Envs
 ###
-ENV MY_USER="devilbox" \
-	MY_GROUP="devilbox" \
+ENV MY_USER="user" \
+	MY_GROUP="user" \
 	MY_UID="1000" \
 	MY_GID="1000" \
 	PHP_VERSION="7.4"
@@ -38,7 +38,9 @@ ENV MY_USER="devilbox" \
 ###
 RUN set -eux \
 	&& groupadd -g ${MY_GID} -r ${MY_GROUP} \
-	&& useradd -u ${MY_UID} -m -s /bin/bash -g ${MY_GROUP} ${MY_USER}
+	&& useradd -u ${MY_UID} -m -s /bin/bash -g ${MY_GROUP} ${MY_USER} \
+	&& groupadd -g 1001 postgresql \
+	&& useradd -u 1001 -g 1001 -ms /bin/bash postgresql
 
 
 ###
