reset user devilbox

--- a/Dockerfiles/base/Dockerfile-7.4
+++ b/Dockerfiles/base/Dockerfile-7.4
@@ -26,8 +26,8 @@ LABEL "org.opencontainers.image.description"="PHP-FPM 7.4-base"
 ###
 ### Envs
 ###
-ENV MY_USER="user" \
-	MY_GROUP="user" \
+ENV MY_USER="devilbox" \
+	MY_GROUP="devilbox" \
 	MY_UID="1000" \
 	MY_GID="1000" \
 	PHP_VERSION="7.4"
