--- a/Dockerfiles/prod/Dockerfile-7.4
+++ b/Dockerfiles/prod/Dockerfile-7.4
@@ -93,6 +93,7 @@ VOLUME /var/log/php
 # VOLUME /var/mail
 
 # ENV LC_ALL=en_US.UTF-8
+# ENV LC_ALL=C
 # ENV LANG=en_US.UTF-8
 # ENV LANGUAGE=en_US.UTF-8
 ENV COMPOSER_MEMORY_LIMIT=-1
