--- a/Dockerfiles/work/Dockerfile-7.4
+++ b/Dockerfiles/work/Dockerfile-7.4
@@ -60,8 +60,8 @@ RUN set -eux \
 	&& DEBIAN_FRONTEND=noninteractive apt-get install -qq -y --no-install-recommends --no-install-suggests \
 	ack-grep \
 	aspell \
-	autoconf \
-	automake \
+	# autoconf \
+	# automake \
 	bash-completion \
 	binutils \
 	blackfire-agent \
@@ -72,21 +72,21 @@ RUN set -eux \
 	dos2unix \
 	file \
 	gawk \
-	gcc \
+	# gcc \
 	git \
-	git-flow \
-	git-svn \
+	# git-flow \
+	# git-svn \
 	ghostscript \
 	graphviz \
 	hostname \
 	htop \
-	imagemagick \
-	iputils-ping \
+	# imagemagick \
+	# iputils-ping \
 	less \
-	libc-dev \
-	libffi-dev \
-	libssl-dev \
-	libyaml-dev \
+	# libc-dev \
+	# libffi-dev \
+	# libssl-dev \
+	# libyaml-dev \
 	make \
 	mongodb-org-shell \
 	mongodb-org-tools \
@@ -113,35 +113,27 @@ RUN set -eux \
 	w3m \
 	whois \
 	xz-utils \
-	yarn \
+	# yarn \
 	zip \
 	zlib1g-dev \
 	zsh \
-	&& DEBIAN_FRONTEND=noninteractive apt-get purge -qq -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false apt-utils \
-	&& apt-get autoremove -y && apt-get autoclean -y && apt-get clean -y \
-	&& rm -fr /tmp/* /var/tmp/* \
-	&& rm -rf /var/lib/apt/lists/* \
-	\
-	&& (find /usr/local/bin -type f -print0 | xargs -n1 -0 strip --strip-all -p 2>/dev/null || true) \
-	&& (find /usr/local/lib -type f -print0 | xargs -n1 -0 strip --strip-all -p 2>/dev/null || true) \
-	&& (find /usr/local/sbin -type f -print0 | xargs -n1 -0 strip --strip-all -p 2>/dev/null || true)
-
-
-###
-### Install custom software
-###
-RUN set -eux \
-	echo	"-------------------- pip --------------------" \
-	&& DEBIAN_FRONTEND=noninteractive apt-get update -qq \
-	&& DEBIAN_FRONTEND=noninteractive apt-get install -qq -y --no-install-recommends --no-install-suggests \
-	libpython-dev \
-	python \
-	&& DEBIAN_FRONTEND=noninteractive apt-get purge -qq -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
-	&& apt-get autoremove -y && apt-get autoclean -y && apt-get clean -y \
-	&& rm -fr /tmp/* /var/tmp/* \
-	&& rm -rf /var/lib/apt/lists/* \
-	\
-	&& curl -sS -L --fail https://bootstrap.pypa.io/get-pip.py | python \
+	# 
+	# 
+	###
+	### Install custom software
+	###
+	# RUN set -eux \
+	# 	echo	"-------------------- pip --------------------" \
+	# 	&& DEBIAN_FRONTEND=noninteractive apt-get update -qq \
+	# 	&& DEBIAN_FRONTEND=noninteractive apt-get install -qq -y --no-install-recommends --no-install-suggests \
+	# 	libpython-dev \
+	# 	python \
+	# 	&& DEBIAN_FRONTEND=noninteractive apt-get purge -qq -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
+	# 	&& apt-get autoremove -y && apt-get autoclean -y && apt-get clean -y \
+	# 	&& rm -fr /tmp/* /var/tmp/* \
+	# 	&& rm -rf /var/lib/apt/lists/* \
+	# 	\
+	# 	&& curl -sS -L --fail https://bootstrap.pypa.io/get-pip.py | python \
 	\
 	\
 	# -------------------- nvm --------------------
@@ -170,12 +162,12 @@ RUN set -eux \
 	&& make install \
 	&& cd / \
 	&& rm -rf /usr/local/src/awesome-ci \
-	\
-	\
+	# \
+	# \
 	# -------------------- deployer --------------------
-	&& curl -sS -L --fail https://deployer.org/deployer.phar -L -o /usr/local/bin/dep \
-	&& chmod +x /usr/local/bin/dep \
-	\
+	# && curl -sS -L --fail https://deployer.org/deployer.phar -L -o /usr/local/bin/dep \
+	# && chmod +x /usr/local/bin/dep \
+	# \
 	# # -------------------- drush7 --------------------
 	# && git clone https://github.com/drush-ops/drush.git /usr/local/src/drush7 \
 	# && cd /usr/local/src/drush7 \
@@ -344,6 +336,14 @@ RUN set -eux \
 	&& chmod +x /usr/local/bin/wp \
 	\
 	# -------------------- cleanup --------------------
+	&& DEBIAN_FRONTEND=noninteractive apt-get purge -qq -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false apt-utils \
+	&& apt-get autoremove -y && apt-get autoclean -y && apt-get clean -y \
+	&& rm -fr /tmp/* /var/tmp/* \
+	&& rm -rf /var/lib/apt/lists/* \
+	\
+	&& (find /usr/local/bin -type f -print0 | xargs -n1 -0 strip --strip-all -p 2>/dev/null || true) \
+	&& (find /usr/local/lib -type f -print0 | xargs -n1 -0 strip --strip-all -p 2>/dev/null || true) \
+	&& (find /usr/local/sbin -type f -print0 | xargs -n1 -0 strip --strip-all -p 2>/dev/null || true) \
 	&& rm -rf /home/${MY_USER}/.*json \
 	&& rm -rf /home/${MY_USER}/.cache \
 	&& rm -rf /home/${MY_USER}/.composer \
@@ -384,51 +384,51 @@ RUN set -eux \
 ###
 ### Install Composer (PHP)
 ###
-RUN set -eux \
-	# -------------------- asgardcms --------------------
-	&& COMPOSER_HOME="/usr/local/src/composer" COMPOSER_MEMORY_LIMIT=-1 /usr/local/bin/composer global require  asgardcms/asgardcms-installer \
-	&& ln -s /usr/local/src/composer/vendor/asgardcms/asgardcms-installer/asgardcms /usr/local/bin/ \
-	\
-	# -------------------- codeception --------------------
-	&& COMPOSER_HOME="/usr/local/src/composer" COMPOSER_MEMORY_LIMIT=-1 /usr/local/bin/composer global require  codeception/codeception \
-	&& ln -s /usr/local/src/composer/vendor/codeception/codeception/codecept /usr/local/bin/ \
-	\
-	# -------------------- lumen --------------------
-	&& COMPOSER_HOME="/usr/local/src/composer" COMPOSER_MEMORY_LIMIT=-1 /usr/local/bin/composer global require  laravel/lumen-installer \
-	&& ln -s /usr/local/src/composer/vendor/laravel/lumen-installer/lumen /usr/local/bin/ \
-	\
-	# -------------------- photon --------------------
-	&& COMPOSER_HOME="/usr/local/src/composer" COMPOSER_MEMORY_LIMIT=-1 /usr/local/bin/composer global require  photoncms/installer \
-	&& ln -s /usr/local/src/composer/vendor/photoncms/installer/photon /usr/local/bin/ \
-	\
-	# -------------------- prestissimo --------------------
-	&& COMPOSER_HOME="/usr/local/src/composer" COMPOSER_MEMORY_LIMIT=-1 /usr/local/bin/composer global require  hirak/prestissimo \
-	\
-	\
-	&& rm -rf /tmp/* \
-	&& (rm -rf /tmp/.* || true) \
-	\
-	&& (find /usr/local/bin -type f -print0 | xargs -n1 -0 strip --strip-all -p 2>/dev/null || true) \
-	&& (find /usr/local/lib -type f -print0 | xargs -n1 -0 strip --strip-all -p 2>/dev/null || true) \
-	&& (find /usr/local/sbin -type f -print0 | xargs -n1 -0 strip --strip-all -p 2>/dev/null || true)
-
-
+# RUN set -eux \
+# 	# -------------------- asgardcms --------------------
+# 	&& COMPOSER_HOME="/usr/local/src/composer" COMPOSER_MEMORY_LIMIT=-1 /usr/local/bin/composer global require  asgardcms/asgardcms-installer \
+# 	&& ln -s /usr/local/src/composer/vendor/asgardcms/asgardcms-installer/asgardcms /usr/local/bin/ \
+# 	\
+# 	# -------------------- codeception --------------------
+# 	&& COMPOSER_HOME="/usr/local/src/composer" COMPOSER_MEMORY_LIMIT=-1 /usr/local/bin/composer global require  codeception/codeception \
+# 	&& ln -s /usr/local/src/composer/vendor/codeception/codeception/codecept /usr/local/bin/ \
+# 	\
+# 	# -------------------- lumen --------------------
+# 	&& COMPOSER_HOME="/usr/local/src/composer" COMPOSER_MEMORY_LIMIT=-1 /usr/local/bin/composer global require  laravel/lumen-installer \
+# 	&& ln -s /usr/local/src/composer/vendor/laravel/lumen-installer/lumen /usr/local/bin/ \
+# 	\
+# 	# -------------------- photon --------------------
+# 	&& COMPOSER_HOME="/usr/local/src/composer" COMPOSER_MEMORY_LIMIT=-1 /usr/local/bin/composer global require  photoncms/installer \
+# 	&& ln -s /usr/local/src/composer/vendor/photoncms/installer/photon /usr/local/bin/ \
+# 	\
+# 	# -------------------- prestissimo --------------------
+# 	&& COMPOSER_HOME="/usr/local/src/composer" COMPOSER_MEMORY_LIMIT=-1 /usr/local/bin/composer global require  hirak/prestissimo \
+# 	\
+# 	\
+# 	&& rm -rf /tmp/* \
+# 	&& (rm -rf /tmp/.* || true) \
+# 	\
+# 	&& (find /usr/local/bin -type f -print0 | xargs -n1 -0 strip --strip-all -p 2>/dev/null || true) \
+# 	&& (find /usr/local/lib -type f -print0 | xargs -n1 -0 strip --strip-all -p 2>/dev/null || true) \
+# 	&& (find /usr/local/sbin -type f -print0 | xargs -n1 -0 strip --strip-all -p 2>/dev/null || true) \
+#
+#
 ###
 ### Install npm (Node)
 ###
-RUN set -eux \
-	# -------------------- angular_cli --------------------
-	# && su -c '. /opt/nvm/nvm.sh; npm install -g --force @angular/cli' devilbox \
-	# \
-	# -------------------- eslint --------------------
-	&& su -c '. /opt/nvm/nvm.sh; npm install -g --force eslint' devilbox \
+#RUN set -eux \
+# -------------------- angular_cli --------------------
+# && su -c '. /opt/nvm/nvm.sh; npm install -g --force @angular/cli' devilbox \
+# \
+# -------------------- eslint --------------------
+&& su -c '. /opt/nvm/nvm.sh; npm install -g --force eslint' devilbox \
 	\
 	# -------------------- grunt --------------------
-	&& su -c '. /opt/nvm/nvm.sh; npm install -g --force grunt' devilbox \
-	\
+	# && su -c '. /opt/nvm/nvm.sh; npm install -g --force grunt' devilbox \
+	# \
 	# -------------------- grunt_cli --------------------
-	&& su -c '. /opt/nvm/nvm.sh; npm install -g --force grunt-cli' devilbox \
-	\
+	# && su -c '. /opt/nvm/nvm.sh; npm install -g --force grunt-cli' devilbox \
+	# \
 	# -------------------- gulp --------------------
 	&& su -c '. /opt/nvm/nvm.sh; npm install -g --force gulp' devilbox \
 	\
@@ -499,24 +499,24 @@ RUN set -eux \
 ###
 ### Install pip (Python) packages
 ###
-RUN set -eux \
-	# -------------------- ansible --------------------
-	&& pip install --no-cache-dir --force-reinstall ansible \
-	\
-	# -------------------- yamllint --------------------
-	&& pip install --no-cache-dir --force-reinstall yamllint \
-	\
-	# -------------------- yq --------------------
-	&& pip install --no-cache-dir --force-reinstall yq \
-	\
-	\
-	&& rm -rf /root/.cache/pip \
-	&& rm -rf /tmp/* \
-	&& (rm -rf /tmp/.* || true) \
-	\
-	&& (find /usr/local/bin -type f -print0 | xargs -n1 -0 strip --strip-all -p 2>/dev/null || true) \
-	&& (find /usr/local/lib -type f -print0 | xargs -n1 -0 strip --strip-all -p 2>/dev/null || true) \
-	&& (find /usr/local/sbin -type f -print0 | xargs -n1 -0 strip --strip-all -p 2>/dev/null || true)
+# RUN set -eux \
+# 	# -------------------- ansible --------------------
+# 	&& pip install --no-cache-dir --force-reinstall ansible \
+# 	\
+# 	# -------------------- yamllint --------------------
+# 	&& pip install --no-cache-dir --force-reinstall yamllint \
+# 	\
+# 	# -------------------- yq --------------------
+# 	&& pip install --no-cache-dir --force-reinstall yq \
+# 	\
+# 	\
+# 	&& rm -rf /root/.cache/pip \
+# 	&& rm -rf /tmp/* \
+# 	&& (rm -rf /tmp/.* || true) \
+# 	\
+# 	&& (find /usr/local/bin -type f -print0 | xargs -n1 -0 strip --strip-all -p 2>/dev/null || true) \
+# 	&& (find /usr/local/lib -type f -print0 | xargs -n1 -0 strip --strip-all -p 2>/dev/null || true) \
+# 	&& (find /usr/local/sbin -type f -print0 | xargs -n1 -0 strip --strip-all -p 2>/dev/null || true)
 
 
 ###
@@ -563,7 +563,7 @@ RUN set -eux \
 	&& composer --version 2>/dev/null | grep -E 'version\s*[.0-9]+' \
 	&& su  -c '. /opt/nvm/nvm.sh; nvm --version' devilbox | grep -E '^[.0-9]+' \
 	&& regex-grep --version | grep -E '[.0-9]+' \
-	&& dep --version 2>/dev/null | grep -Ei 'deployer\s*(version\s*)?[.0-9]+' \
+	# && dep --version 2>/dev/null | grep -Ei 'deployer\s*(version\s*)?[.0-9]+' \
 	# && drush7 --version | grep -E '7[.0-9]+\s*$' \
 	# && drush8 --version | grep -E '8[.0-9]+\s*$' \
 	# && drush9 --version | grep -E '9[.0-9]+\s*$' \
@@ -583,20 +583,20 @@ RUN set -eux \
 	&& wp --allow-root --version | grep -E '[.0-9]+' \
 	\
 	# -------------------- Composer --------------------
-	&& asgardcms --version 2>/dev/null | grep -Ei 'AsgardCMS\sInstaller\s[.0-9]+' \
-	&& codecept --version 2>/dev/null | grep -E '^Codeception(\sversion)?\s[.0-9]+$' \
-	&& lumen --version 2>/dev/null | grep -E '^Lumen Installer\s[.0-9]+$' \
-	&& photon --version | grep -E 'Installer [.0-9]+' \
+	# && asgardcms --version 2>/dev/null | grep -Ei 'AsgardCMS\sInstaller\s[.0-9]+' \
+	# && codecept --version 2>/dev/null | grep -E '^Codeception(\sversion)?\s[.0-9]+$' \
+	# && lumen --version 2>/dev/null | grep -E '^Lumen Installer\s[.0-9]+$' \
+	# && photon --version | grep -E 'Installer [.0-9]+' \
 	\
 	# -------------------- PIP --------------------
-	&& ansible --version | grep -E '^ansible [.0-9]+$' \
-	&& yamllint --version 2>&1 | grep -E '[.0-9]+' \
-	&& yq --version 2>&1 | grep -E '^yq\s+[.0-9]+$' \
+	# && ansible --version | grep -E '^ansible [.0-9]+$' \
+	# && yamllint --version 2>&1 | grep -E '[.0-9]+' \
+	# && yq --version 2>&1 | grep -E '^yq\s+[.0-9]+$' \
 	\
 	# -------------------- NPM --------------------
 	# && ng  version 2>&1 | grep -iE 'Angular CLI:\s*[.0-9]+' \
 	&& eslint -v | grep -E '[.0-9]+' \
-	&& grunt --version | grep -E '[.0-9]+' \
+	# && grunt --version | grep -E '[.0-9]+' \
 	&& gulp --version | grep -E '[.0-9]+' \
 	&& jsonlint --version | grep -E '[.0-9]+' \
 	# && pm2 --no-daemon --version | grep -E '[.0-9]+' \
