--- a/Dockerfiles/work/Dockerfile-7.4
+++ b/Dockerfiles/work/Dockerfile-7.4
@@ -279,19 +279,19 @@ RUN set -eux \
 	\
 	\
 	# -------------------- phalcon --------------------
-	# && git clone https://github.com/phalcon/phalcon-devtools /usr/local/src/phalcon-devtools \
-	# && cd /usr/local/src/phalcon-devtools \
-	# && git checkout $(git describe --abbrev=0 --tags) \
-	# && COMPOSER_MEMORY_LIMIT=-1 /usr/local/bin/composer install \
-	# \
-	# && chown -R ${MY_USER}:${MY_GROUP} /usr/local/src/phalcon-devtools \
-	# && su - ${MY_USER} -c 'cd /usr/local/src/phalcon-devtools && ./phalcon.sh' \
-	# && ln -sf /usr/local/src/phalcon-devtools/phalcon /usr/local/bin/phalcon \
-	# && chmod +x phalcon \
-	# && cd / \
-	# && rm -rf /usr/local/src/phalcon-devtools/.git \
-	# \
-	# \
+	&& git clone https://github.com/phalcon/phalcon-devtools /usr/local/src/phalcon-devtools \
+	&& cd /usr/local/src/phalcon-devtools \
+	&& git checkout $(git describe --abbrev=0 --tags) \
+	&& COMPOSER_MEMORY_LIMIT=-1 /usr/local/bin/composer install \
+	\
+	&& chown -R ${MY_USER}:${MY_GROUP} /usr/local/src/phalcon-devtools \
+	&& su - ${MY_USER} -c 'cd /usr/local/src/phalcon-devtools && ./phalcon.sh' \
+	&& ln -sf /usr/local/src/phalcon-devtools/phalcon /usr/local/bin/phalcon \
+	&& chmod +x phalcon \
+	&& cd / \
+	&& rm -rf /usr/local/src/phalcon-devtools/.git \
+	\
+	\
 	# -------------------- phpcs --------------------
 	&& curl -sS -L --fail https://squizlabs.github.io/PHP_CodeSniffer/phpcs.phar > /usr/local/bin/phpcs 2>/dev/null \
 	&& chmod +x /usr/local/bin/phpcs \
@@ -573,7 +573,7 @@ RUN set -eux \
 	&& linkcheck --version | grep -E '^linkcheck\sv[.0-9]+' \
 	&& su - ${MY_USER} -c '/usr/local/src/linuxbrew/bin/brew --version' | grep -E 'Homebrew\s*[.0-9]+' \
 	&& mysqldump-secure --version | grep -E 'Version:\s*[.0-9]+' \
-	# && phalcon commands | grep -E '[.0-9]+' \
+	&& phalcon commands | grep -E '[.0-9]+' \
 	&& phpcs --version | grep -E 'version [.0-9]+' \
 	&& phpcbf --version | grep -E 'version [.0-9]+' \
 	&& phpmd --version | grep -E '^PHPMD [.0-9]+' \
