fix docker file

--- a/Dockerfiles/mods/Dockerfile-7.4
+++ b/Dockerfiles/mods/Dockerfile-7.4
@@ -450,7 +450,7 @@ RUN set -eux \
 	&& true
 
 
--------------------- Installing PHP Extension: phalcon --------------------
+# -------------------- Installing PHP Extension: phalcon --------------------
 RUN set -eux \
 	# Installation: Generic
 	# Type:         GIT extension
